<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="accountId" type="id" />
    <item name="accountIdLabel" type="id" />
    <item name="branchId" type="id" />
    <item name="branchIdLabel" type="id" />
    <item name="bankAccountId" type="id" />
    <item name="bankAccountIdLabel" type="id" />
    <item name="bankAccountPurpose" type="id" />
    <item name="bankAccountPurposeLabel" type="id" />
    <item name="wireInstructions" type="id"/>
    <item name="wireInstructionsLabel" type="id"/>
    <item name="intermediaryBankId" type="id"/>
    <item name="intermediaryBankIdLabel" type="id"/>
    <item name="intermediaryBankAccountId" type="id"/>
    <item name="intermediaryBankAccountIdLabel" type="id"/>
    <item name="cardNumber" type="id" />
    <item name="cardNumberLabel" type="id" />
    <item name="dateOfExpiry" type="id" />
    <item name="dateOfExpiryLabel" type="id" />
    <item name="cvv" type="id" />
    <item name="cvvLabel" type="id" />
    <item name="email" type="id"/>
    <item name="emailLabel" type="id"/>
    <item name="bankAccountRelationship" type="id"/>
    <item name="bankAccountRelationshipLabel" type="id"/>
    <item name="bankId" type="id"/>
    <item name="bankIdLabel" type="id"/>
    <item name="bankName" type="id"/>
    <item name="bankNameLabel" type="id"/>
    <item name="branchName" type="id"/>
    <item name="branchNameLabel" type="id"/>
    <item name="branchAddressLine1" type="id"/>
...
    <item name="businessRegistrationStateProvince" type="id"/>
    <item name="businessRegistrationStateProvinceLabel" type="id"/>
    <item name="businessRegistrationCountry" type="id"/>
    <item name="businessRegistrationCountryLabel" type="id"/>
    <item name="businessOperatingName" type="id"/>
    <item name="businessOperatingNameLabel" type="id"/>
    <item name="firstName" type="id"/>
    <item name="firstNameLabel" type="id"/>
    <item name="middleName" type="id"/>
    <item name="middleNameLabel" type="id"/>
    <item name="lastName" type="id"/>
    <item name="lastNameLabel" type="id"/>
    <item name="dateOfBirth" type="id"/>
    <item name="dateOfBirthLabel" type="id"/>
    <item name="countryOfBirth" type="id"/>
    <item name="countryOfBirthLabel" type="id"/>
    <item name="countryOfNationality" type="id"/>
    <item name="countryOfNationalityLabel" type="id"/>
...
    <item name="passportId" type="id"/>
    <item name="passportIdLabel" type="id"/>
    <item name="driversLicenseId" type="id"/>
    <item name="driversLicenseIdLabel" type="id"/>
    <item name="employerId" type="id"/>
    <item name="employerIdLabel" type="id"/>
    <item name="addressLine1" type="id"/>
    <item name="addressLine1Label" type="id"/>
    <item name="addressLine2" type="id"/>
    <item name="addressLine2Label" type="id"/>
    <item name="city" type="id"/>
    <item name="cityLabel" type="id"/>
    <item name="stateProvince" type="id"/>
    <item name="stateProvinceLabel" type="id"/>
    <item name="country" type="id"/>
    <item name="countryLabel" type="id"/>
    <item name="postalCode" type="id"/>
    <item name="postalCodeLabel" type="id"/>
    <item name="taxReasonId" type="id"/>
    <item name="taxReasonIdLabel" type="id"/>
    <item name="taxId" type="id"/>
    <item name="taxIdLabel" type="id"/>
    <item name="residence" type="id"/>
    <item name="residenceLabel" type="id"/>
...
