...
    <string name="fee_percent_formatter">%1$s%% (Min:%2$s %3$s, Max:%2$s %4$s)</string>
    <string name="fee_mix_no_min_and_max_formatter">%1$s%2$s + %3$s%%</string>
    <string name="fee_mix_only_min_formatter">%1$s%2$s + %3$s%% (Min:%1$s %4$s)</string>
    <string name="fee_mix_only_max_formatter">%1$s%2$s + %3$s%% (Max:%1$s %4$s)</string>
    <string name="fee_mix_formatter">%1$s%2$s + %3$s%% (Min:%1$s %4$s, Max:%1$s %5$s)</string>

    <string name="account_holder">ACCOUNT HOLDER INFO</string>
    <string name="account_information">ACCOUNT INFO: %s(%s)</string>
    <string name="address">ADDRESS</string>
    <string name="contact_information">CONTACT INFO</string>
    <string name="identification">IDENTIFICATION</string>
    <string name="intermediary_account">INTERMEDIARY ACCOUNT</string>
    <string name="mobileFeesAndProcessingTime">FEES AND PROCESSING TIME</string>

    <string name="search_hint">Search Hint</string>
...
    <string name="selected_currency_item_description">Selected currency item</string>
    <string name="transfer_method_context_button_description">Context menu</string>
    <string name="item_select_description">Selected item</string>

    <string name="error_unmapped_field">Unmapped field, Please contact support.</string>

    <string name="country_placeholder">Canada</string>
    <string name="currency_placeholder">CAD</string>
    <string name="feesAndProcessTimePlaceholder">$20.00 USD fee \u2022 1\-3 Business Days </string>
    <string name="mobileCountryCurrencyLabel">LOCATION AND CURRENCY</string>
    <string name="mobileTransferMethodLabel">TRANSFER METHOD</string>
    <string name="mobileTransferMethodsHeader">Transfer methods</string>

    <string name="prepaidCardManagementInfo" >"Log in using a web browser to manage your card"</string>
</resources>

